RESOLVED FIXED151985
Fix the !ENABLE(DFG_JIT) build after r193649
https://bugs.webkit.org/show_bug.cgi?id=151985
Summary Fix the !ENABLE(DFG_JIT) build after r193649
Csaba Osztrogonác
Reported 2015-12-08 02:13:06 PST
The iter paramter of emitSlow_op_loop_hint became unused after r193649 which caused build failure if DFG JIT is disabled in build time. ( http://trac.webkit.org/changeset/193649/trunk/Source/JavaScriptCore/jit/JITOpcodes.cpp )
Attachments
Patch (1.15 KB, patch)
2015-12-08 02:15 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-12-08 02:15:03 PST
Radar WebKit Bug Importer
Comment 2 2015-12-08 08:48:32 PST
WebKit Commit Bot
Comment 3 2015-12-08 09:35:52 PST
Comment on attachment 266866 [details] Patch Clearing flags on attachment: 266866 Committed r193754: <http://trac.webkit.org/changeset/193754>
WebKit Commit Bot
Comment 4 2015-12-08 09:35:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.