Fix the !ENABLE(DFG_JIT) build after r193649 https://bugs.webkit.org/show_bug.cgi?id=151985

Reviewed by Saam Barati.

* jit/JITOpcodes.cpp:
(JSC::JIT::emitSlow_op_loop_hint):


Canonical link: https://commits.webkit.org/170141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193754 268f45cc-cd09-0410-ab3c-d52691b4dbfc